Fix bug with logging in from the main page.
The login form no longer redirected to the main PlantShare page
as expected because the 'next' field needed a default value. (#235)

--- a/gobotany/plantshare/templates/_login_form.html
+++ b/gobotany/plantshare/templates/_login_form.html
@@ -11,6 +11,7 @@
         <label for="id_password">Password</label>
         <input type="password" name="password" id="id_password">
         <input type="submit" class="button" value="Login">
-        <input type="hidden" name="next" value="{{ next }}">
+        <input type="hidden" name="next"
+        value="{% if next %}{{ next }}{% else %}{% url ps-main %}{% endif %}">
     </form>
 
