Set the initial focus on the username login field.
Because the login form is used only in two places, neither of
which have other forms competing for the user's attention,
the cursor focus can be automatically set to the username
field, saving time for the user as they log in. (#235)

--- a/gobotany/plantshare/templates/_login_form.html
+++ b/gobotany/plantshare/templates/_login_form.html
@@ -7,7 +7,8 @@
         view or create a context processor for it.
         {% endcomment %}
         <label for="id_username">Username</label>
-        <input id="id_username" type="text" name="username" maxlength="30">
+        <input id="id_username" type="text" name="username" maxlength="30"
+            autofocus>
         <label for="id_password">Password</label>
         <input type="password" name="password" id="id_password">
         <input type="submit" class="button" value="Login">
