Fix layout for "Location" segment of profile page.

--- a/gobotany/plantshare/templates/profile.html
+++ b/gobotany/plantshare/templates/profile.html
@@ -83,7 +83,7 @@
 
 <section class="location-section">
     <div class="info box">
-        <img src="/static/images/icons/my-location-placeholder.png" alt="">
+        <img class="map-thumbnail" src="/static/images/icons/my-location-placeholder.png" alt="">
         <table>
             <tbody>
                 <tr>
