Correct text alignment on labels and links.

--- a/gobotany/plantshare/templates/profile.html
+++ b/gobotany/plantshare/templates/profile.html
@@ -87,7 +87,7 @@
         <table>
             <tbody>
                 <tr>
-                    <td>Visibility:</td>
+                    <td class="first">Visibility:</td>
                     <td>
                         <div class="display">
                             <p>Specific Groups - 6 Selected <a href="#" class="edit-link">Edit</a></p>
@@ -101,14 +101,14 @@
                     </td>
                 </tr>
                 <tr>
-                    <td>Location:</td>
+                    <td class="first">Location:</td>
                     <td>
                         <div class="display">
-                            <ul>
+                            <ul class="coords-list">
                                 <li>Lowell, MA</li>
                                 <li>Latitude: 41.2482082147523582034</li>
                                 <li>Longitude: -45.2348724-8057312340</li>
-                            <ul>
+                            </ul>
                             <a href="#" class="edit-link">Edit</a></p>
                         </div>
                         <div class="edit">
