Specify that search engine robots not index the Contributors page.
Support a bit of additional privacy for any contributors who may wish it.

--- a/gobotany/site/templates/gobotany/contributors.html
+++ b/gobotany/site/templates/gobotany/contributors.html
@@ -2,6 +2,8 @@
 
 {% block title %}Contributors{% endblock %}
 
+{% block more_meta_link %}<meta name="robots" content="noindex">{% endblock %}
+
 {% block js_require %}
     require(['site/about']);
 {% endblock %}
