--- a/gobotany/plantshare/templates/registration/logout.html
+++ b/gobotany/plantshare/templates/registration/logout.html
@@ -7,8 +7,8 @@
 {% block main_content %}
 <h1>Logged Out</h1>
 
-<p>You have successfully logged out. You may now close this browser window 
-or <a href="{% url ps-main %}">log in</a> again.</p>
+<p>You have successfully logged out of PlantShare. You may now close this
+browser window or <a href="{% url ps-main %}">log in</a> again.</p>
 {% endblock %}
 
 {% block sidebar_content %}
