--- a/gobotany/plantshare/templates/sightings.html
+++ b/gobotany/plantshare/templates/sightings.html
@@ -7,6 +7,14 @@
 {% block main_content %}
 <h1>Sightings</h1>
 
+<h2>Latest</h2>
+{% for sighting in sightings %}
+<p><a href="{% url ps-sighting sighting.id %}">Sighting: {{ sighting.title }}</a>
+ ({{ sighting.identification }} at {{ sighting.location }}, posted by
+ {{ sighting.user }} on {{ sighting.created }})
+</p>
+{% endfor %}
+
 {% endblock %}
 
 {% block sidebar_content %}
