--- a/gobotany/plantshare/templates/new_sighting.html
+++ b/gobotany/plantshare/templates/new_sighting.html
@@ -11,10 +11,9 @@
     <p><strong>Spotted a plant and want to share it with others? Here's where
         to start!</strong></p>
     <p><em>Rare Plant Sightings: As a matter of policy, sightings of rare 
-    plants will not be posted to any other PlantShare members. However,
-    we welcome you to send these postings to us. We will use this
-    information for our scientific studies. Postings will be
-    confidential.</em></p>
+    plants will not be visible to other PlantShare members. However,
+    we welcome you to post such sightings. We will keep them confidential
+    and use the information for our scientific studies.</em></p>
     <p>* = Required</p>
 </div>
 
