Begin writing a general-use input-box suggest component.
A component for offering suggestions as the user types in an input
box is needed in several places for PlantShare, including the Sightings
form. Suggestions already are offered for site search. This new
component will be for handling such capabilities site-wide. Most
of its features are working and set up on a test page. (#235)

--- a/gobotany/static/sass/site.scss
+++ b/gobotany/static/sass/site.scss
@@ -548,6 +548,24 @@ footer {
     }
 }
 
+/* Text input with suggestions */
+
+input.suggest {
+    &+div {
+        background: #fff;
+        border: 1px solid #999;
+        position: absolute;
+        li {
+            list-style-type: none;
+            padding: 0 2px;
+            &.selected {
+                background-color: #666;
+                color: #fff;
+            }
+        }
+    }
+}
+
 /* Imports for various pages, sections, features, etc. Each of these
  * can contain their own media queries. */
 
