--- a/gobotany/dkey/templates/dkey/page.html
+++ b/gobotany/dkey/templates/dkey/page.html
@@ -88,7 +88,7 @@
             </a>
           <br>
           {% elif lead.taxa_rank and lead.taxa_set|length == 1 %}
-            <a class="what-lies-beneath" href="{% url dkey_page p|slug %}">
+            <a class="what-lies-beneath" href="{{ p.title|dkey_url }}">
               Choose this {{ lead.taxa_rank }}
             </a>
           <br>
