Add the suggest list to the PlantShare sightings plant name box.
Fix various problems along the way, such as HTML5 required fields
triggering validation errors upon pressing Enter, visibility of
the menu upon pressing various keys, etc. (#235)

--- a/gobotany/site/templates/gobotany/_base.html
+++ b/gobotany/site/templates/gobotany/_base.html
@@ -47,6 +47,7 @@
         {% endif %}
 
         <script>
+            require(['util/suggester_init']);
             require(['util/activate_search_suggest']);
             {% block js_require %}{% endblock %}
         </script>
