--- a/gobotany/site/templates/gobotany/suggest_test.html
+++ b/gobotany/site/templates/gobotany/suggest_test.html
@@ -74,7 +74,7 @@
             </form>
         </div>
 
-        <h4>Variation with initial value</h4>
+        <h4>Variation with initial value, and extra field set to required</h4>
 
         <div class="content">
             <form action="/ps/sightings/" method="post">
@@ -94,6 +94,7 @@
                     <option>Title2</option>
                     <option>Title3</option>
                 </datalist>
+                <input type="text" name="location_notes" required>
                 <button type="submit">Post Sighting</button>
             </form>
         </div>
